<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/category" />

    <item
        android:id="@+id/solverFragment"
        android:icon="@drawable/ic_baseline_calculate_24"
        android:title="@string/solver" />

    <item
        android:id="@+id/plotFragment"
        android:icon="@drawable/ic_baseline_show_chart_24"
        android:title="@string/plot" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />

</menu>